# python-tag-wrangler

./: LICENSE  README.md  justfile  pyproject.toml
.streamlit/: config.toml
sample_vault/: ideas.md  meeting-notes.md  untagged-note.md
sample_vault/daily/: 2025-11-15.md  2025-11-16.md  2025-11-17.md
sample_vault/projects/: api-migration.md  mobile-app.md  web-redesign.md
sample_vault/references/: docker-cheatsheet.md  git-workflow.md  javascript-notes.md  python-patterns.md
src/tag_wrangler/: __init__.py  analyzer.py  models.py  operations.py  parser.py  vault.py
src/tag_wrangler/app/: main.py  state.py
src/tag_wrangler/app/pages/: 1_Dashboard.py  2_Tag_Explorer.py  3_Standardiser.py  4_Bulk_Operations.py  5_Note_Browser.py
